--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "bootstrap-icons": "^1.8.2",
+    "busboy": "^1.0.0",
     "cloudinary": "^1.30.0",
     "connect-mongodb-session": "^3.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "csurf": "^1.11.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
+    "express-validator": "^6.14.2",
     "mongodb": "^4.6.0",
     "multer": "^1.4.4",
     "nanoid": "^3.3.4",
