--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "express-session": "^1.17.3",
     "express-validator": "^6.14.2",
     "mongodb": "^4.6.0",
-    "multer": "^1.4.4",
+    "multer": "^1.4.5-lts.1",
     "nanoid": "^3.3.4",
     "node": "^17.7.2"
   },
