--- a/package.json
+++ b/package.json
@@ -1,34 +1,37 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "dev": "nodemon index.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "bootstrap-icons": "^1.8.2",
-    "busboy": "^1.0.0",
-    "cloudinary": "^1.30.0",
-    "connect-mongodb-session": "^3.1.1",
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
-    "csurf": "^1.11.0",
-    "dotenv": "^16.0.1",
-    "express": "^4.18.1",
-    "express-session": "^1.17.3",
-    "express-validator": "^6.14.2",
-    "mongodb": "^4.6.0",
-    "multer": "^1.4.5-lts.1",
-    "nanoid": "^3.3.4",
-    "node": "^17.7.2"
-  },
-  "devDependencies": {
-    "@types/node": "^17.0.34",
-    "nodemon": "^2.0.16"
-  }
+	"name": "server",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"start": "node index.js",
+		"dev": "nodemon index.js"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"bcryptjs": "^2.4.3",
+		"bootstrap-icons": "^1.8.2",
+		"busboy": "^1.0.0",
+		"cloudinary": "^1.30.0",
+		"compression": "^1.7.4",
+		"connect-mongodb-session": "^3.1.1",
+		"cookie-parser": "^1.4.6",
+		"cors": "^2.8.5",
+		"csurf": "^1.11.0",
+		"dotenv": "^16.0.1",
+		"express": "^4.18.1",
+		"express-session": "^1.17.3",
+		"express-validator": "^6.14.2",
+		"helmet": "^5.1.0",
+		"mongodb": "^4.6.0",
+		"multer": "^1.4.5-lts.1",
+		"nanoid": "^3.3.4",
+		"node": "^17.7.2"
+	},
+	"devDependencies": {
+		"@types/node": "^17.0.34",
+		"nodemon": "^2.0.16"
+	}
 }
