--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"axios": "^1.5.1",
 		"bcryptjs": "^2.4.3",
 		"bootstrap-icons": "^1.8.2",
 		"busboy": "^1.0.0",
@@ -28,7 +29,8 @@
 		"mongodb": "^4.6.0",
 		"multer": "^1.4.5-lts.1",
 		"nanoid": "^3.3.4",
-		"node": "^17.7.2"
+		"node": "^17.7.2",
+		"node-fetch": "^3.3.2"
 	},
 	"devDependencies": {
 		"@types/node": "^17.0.34",
